2007-08-13  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_vpn_menu): sort VPN connections

2007-08-13  Dan Williams  <dcbw@redhat.com>

	Patch from Michael Biebl <biebl@debian.org>

	* po/POTFILES.in
		- Update for vpn-properties move

2007-08-13  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_get_first_active_vpn_connection,
		   nma_menu_disconnect_vpn_item_activate,
		   nma_menu_add_vpn_menu): list returned from
			nm_client_get_vpn_connections() needs to be freed now
		- (foo_manager_running): set applet & vpn state to UNKNOWN when NM
			goes away

2007-08-13  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_add_networks_helper): don't show non-SSID-broadcasting APs
			in the menu

2007-08-13  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c (nma_menu_device_add_networks): Fix an invalid free
	which happened in case there's no active ssid.
	(sort_devices): Implement.
	(nma_menu_add_devices): Sort the devices before adding them to the menu.

2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* src/gconf-helpers.c:
	* src/applet-dbus-settings.c: fixed some compilation problems.

2007-08-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* src/applet.h: added new GConf path for connection settings.

	* src/gconf-helpers.[ch] (nm_gconf_get_stringlist_helper,
	nm_gconf_get_bytearray_helper): new helper functions.

	* src/applet-dbus-settings.[ch]: added implementation of the new
	configuration interface for the GConf-based applet.

	* src/Makefile.am: added new files.

2007-08-13  Tambet Ingo  <tambet@gmail.com>

	* configure.ac: libnm-glib just got renamed to libnm_glib.
	Add src/vpn-properties/Makefile to AC_OUTPUT.

	* src/Makefile.am: Add vpn-properties to SUBDIRS.

	* src/vpn-properties/*: Move it here from NetworkManager.

2007-08-09  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c (foo_wireless_state_change): Fix a memory corruption.
	

2007-07-26  Dan Williams  <dcbw@redhat.com>
