@@ -1,3 +1,11 @@
+2007-08-14  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- Handle NM_VPN_STATE_* -> NM_VPN_SERVICE_STATE_* and NMVPNState -> 
+			NMVPNServiceState renames
+		- Handle NM_VPN_ACT_STAGE_* -> NM_VPN_CONNECTION_STATE_* and
+			NMVPNActStage -> NMVPNConnectionState renames
+
 2007-08-13  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
